syntax = "proto3";

package auth;

option go_package= "./pkg/pb";

service AuthService {

  rpc Register(RegisterRequest) returns (RegisterResponse){}
  rpc Login(LoginRequest) returns (LoginResponse){}
  rpc JwtValidate(JwtRequest) returns (JwtResponse){}

}



message RegisterRequest{
  string email = 1;
  string password = 2;
}

message RegisterResponse{
  int64 status = 1;
  string error = 2;
}

message LoginRequest{
  string email = 1;
  string password = 2;
}

message LoginResponse{
  int64 status = 1;
  string jwtToken = 3;
  string error = 2;
}

message JwtRequest{
  string jwtToken =1;
}

message JwtResponse{
  int64 status = 1;
  int64 userId = 3;
  string error = 2;
}
